# ComprExIT

./: .env.example  .gitignore  README.md  pyproject.toml  train.py
configs/: compression_config_template.yaml
scripts/downloading/: download_dataset.py  download_model.py
scripts/llama-3.2/ntp/: 512_500x.sh  512_icae.sh  512_ot_2mlp_1b.sh  beacon.sh
scripts/llama-3.2/ntp_3b/: 512_500x_3b.sh  512_beacon_3b.sh  512_icae_3b.sh  512_ot_2mlp_3b.sh
scripts/llama-3.2/sft/: mrqa_500x_1b.sh  mrqa_beacon.sh  mrqa_icae_1b.sh  mrqa_ot_2mlp_1b.sh  mrqa_prompt_tuning_base.sh
scripts/llama-3.2/sft_3b/: mrqa_500x_3b.sh  mrqa_beacon_3b.sh  mrqa_icae_3b.sh  mrqa_ot_2mlp_3b.sh  mrqa_prompt_tuning_base_3b.sh
src/: device_utils.py
src/baselines/activation_beacon/: ARCHITECTURE.md
src/baselines/activation_beacon/configs/: train_with_gist_example.json
src/baselines/activation_beacon/main/: train_with_gist_preprocessing.py
src/baselines/activation_beacon/src/: __init__.py  args.py  args_with_gist.py  data.py  modeling_beacon.py  modeling_utils.py  trainer.py
src/baselines/activation_beacon/src/llama/: configuration_llama.py  modeling_llama.py
src/baselines/activation_beacon/src/mistral/: modeling_mistral.py
src/baselines/activation_beacon/src/qwen2/: modeling_qwen2.py
src/baselines/activation_beacon/src/qwen3/: __init__.py  configuration_qwen3.py  modeling_qwen3.py  modular_qwen3.py
src/data_processing/: __init__.py  candidate_label_datasets.py  data_loading.py  ntp_datasets.py  ntp_preprocessing.py  prompte_template.py  sft_datasets.py  sft_preprocessing.py
src/evaluation/: eval_datasets.py  metrics.py  utils_eval.py
src/model/: __init__.py  inference.py  model.py  modelling_utils.py  pooling.py
src/training/: __init__.py  callbacks.py  trainer.py
